# threshold-auction

./: .gitignore  Cargo.toml  README.md  zk-private-auction-design-v2.md
crates/circuit/: Cargo.toml
crates/circuit/program/: Cargo.toml
crates/circuit/program/src/: main.rs
crates/circuit/src/: auction_logic.rs  commitment.rs  lib.rs
crates/client/: Cargo.toml
crates/client/src/: bid.rs  lib.rs  main.rs  query.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  ibe.rs  lib.rs  pedersen.rs  threshold.rs
crates/decryption-coordinator/: Cargo.toml
crates/decryption-coordinator/src/: lib.rs
crates/dkg/: Cargo.toml
crates/dkg/src/: feldman.rs  lib.rs  participant.rs  types.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/mock-chain/: Cargo.toml
crates/mock-chain/src/: main.rs  types.rs
crates/module/: Cargo.toml
crates/module/src/: call.rs  error.rs  genesis.rs  handlers.rs  lib.rs  queries.rs  state.rs
crates/settler/: Cargo.toml
crates/settler/src/: lib.rs  prover.rs  service.rs
crates/types/: Cargo.toml
crates/types/src/: circuit_io.rs  lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: main.rs
scripts/: test-deployment.sh
