[package]
name = "auction-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Client SDK for bidding in threshold-encrypted auctions"

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
rand.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
bls12_381.workspace = true
group.workspace = true
