[package]
name = "auction-decryption-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Threshold decryption coordination for private auctions"

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
tokio.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
tracing = "0.1"

# BLS cryptography
bls12_381.workspace = true
group.workspace = true
ff.workspace = true

[dev-dependencies]
rand.workspace = true
