[package]
name = "auction-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
auction-circuit.workspace = true
auction-client.workspace = true
auction-dkg.workspace = true
auction-settler.workspace = true
auction-module.workspace = true

bls12_381.workspace = true
ff.workspace = true
group.workspace = true
rand.workspace = true
sha2.workspace = true
