[package]
name = "auction-module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sovereign SDK auction module with threshold encryption"

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
borsh.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
