[package]
name = "auction-settler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Permissionless settlement service for threshold-encrypted auctions"

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
auction-circuit.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
