[package]
name = "auction-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core type definitions for threshold-encrypted auctions"

[dependencies]
borsh.workspace = true
serde.workspace = true
serde_with = { version = "3.0", features = ["hex"] }
sha2.workspace = true
hex.workspace = true
