[package]
name = "auction-validator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
auction-types.workspace = true
auction-crypto.workspace = true
auction-dkg.workspace = true

# BLS
bls12_381.workspace = true
ff.workspace = true
group.workspace = true

# JSON-RPC client
jsonrpsee = { version = "0.24", features = ["http-client", "ws-client"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Random
rand.workspace = true

# Crypto
sha2.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }
